--- a/includes/header.html
+++ b/includes/header.html
@@ -4,11 +4,16 @@
             <img src="assets/img/logo_carpe-lucem.webp" alt="Logo Carpe Lucem">
         </div>
         <nav>
-            <ul>
+            <ul id="nav-menu">
                 <li><a href="index.html" class="active">Accueil</a></li>
                 <li><a href="histoire.html">Notre histoire</a></li>
                 <li><a href="#contact" class="btn-secondary">Contact</a></li>
             </ul>
         </nav>
+        <button class="burger-menu" id="burger-menu" aria-label="Menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </div>
 </header>
